<resources>
    <string-array name="procedures">
        <item>Fen</item>
        <item>Haircut 1</item>
        <item>Haircut 2</item>
        <item>Haircut 3</item>
    </string-array>

    <string name="app_name">MasterRec</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Client">Client</string>
    <string name="Duration">Duration</string>
    <string name="Proc">Procedure</string>
    <string name="Description">Description</string>
    <string name="VIP">VIP</string>
    <string name="newtask">Add task</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Close">Close</string>
    <string name="select_client">Select Client</string>
    <string name="timestart">Start time</string>
    <string name="timefinish">End time</string>
    <string name="begin">Begin:</string>
    <string name="end">End:</string>
    <string name="tasklist">Task list</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
