<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7784a4ff"
    android:orientation="vertical">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <Button
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/select_client"
                android:id="@+id/sel_client"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:ems="10"
                android:id="@+id/editClient"
                android:layout_weight="3">
            </TextView>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date_view"
                android:layout_weight="3">
            </TextView>
        </TableRow>


        <TableRow android:layout_height="100dp"
            android:layout_width="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/timestart">
            </TextView>


            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/timebegin"
                android:layout_column="0"
                android:timePickerMode="spinner"
                android:layoutMode="clipBounds" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/timefinish">
            </TextView>
            <TimePicker
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/timeend"
                android:layout_column="0"
                android:layoutMode="opticalBounds"
                android:prompt="@string/Proc"
                android:timePickerMode="spinner" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Proc">
            </TextView>

            <Spinner
                android:id="@+id/procedurelist"
                android:entries="@array/procedures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </TableRow>




        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description">
            </TextView>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editDescription"
                android:lines="3" >
            </EditText>


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VIP">
            </TextView>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkVIP" />


        </TableRow>



    </TableLayout>










</LinearLayout>